# How-do-langchain-affect-latency

./: .gitignore  Makefile  README.md  README_kr.md  pyproject.toml
debug/: debug.py  run_langchain.py  run_pure.py  test.py
locust/: locustfile.py  locustfile_celery.py
naive/: lang.py  pure.py
queue/: lang.py  pure.py  tasks_lang.py  tasks_pure.py
