[project]
name = "lang-loadtest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery[redis]>=5.5.3",
    "fastapi>=0.115.14",
    "langchain-core>=0.3.67",
    "langchain-ollama>=0.3.3",
    "locust>=2.37.11",
    "uvicorn>=0.35.0",
]
